src/lib/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    LBRACE
    MULTI_COMMENT
    RBRACE
    SHARP

Grammar

Rule 0     S' -> module
Rule 1     module -> program
Rule 2     module -> function_block_definition
Rule 3     module -> function_definition
Rule 4     module -> module function_block_definition
Rule 5     module -> module function_definition
Rule 6     module -> module program
Rule 7     program -> PROGRAM ID var_list BEGIN statement_list END_PROGRAM
Rule 8     program -> PROGRAM ID var_list statement_list END_PROGRAM
Rule 9     function_block_definition -> FUNCTION_BLOCK ID var_list BEGIN statement_list END_FUNCTION_BLOCK
Rule 10    function_block_definition -> FUNCTION_BLOCK ID var_list statement_list END_FUNCTION_BLOCK
Rule 11    function_definition -> FUNCTION ID COLON INT var_list statement_list END_FUNCTION
Rule 12    function_definition -> FUNCTION ID COLON BOOL var_list statement_list END_FUNCTION
Rule 13    function_definition -> FUNCTION ID COLON REAL var_list statement_list END_FUNCTION
Rule 14    function_definition -> FUNCTION ID COLON FLOAT var_list statement_list END_FUNCTION
Rule 15    function_definition -> FUNCTION ID COLON BYTE var_list statement_list END_FUNCTION
Rule 16    var_list -> var_input
Rule 17    var_list -> var_output
Rule 18    var_list -> var
Rule 19    var_list -> var_in_out
Rule 20    var_list -> var_global
Rule 21    var_list -> const
Rule 22    var_list -> var_list var_input
Rule 23    var_list -> var_list var_output
Rule 24    var_list -> var_list var
Rule 25    var_list -> var_list var_in_out
Rule 26    var_list -> var_list var_global
Rule 27    var_list -> var_list const
Rule 28    var_output -> VAR_OUTPUT declare_list END_VAR
Rule 29    var_input -> VAR_INPUT declare_list END_VAR
Rule 30    var_in_out -> VAR_IN_OUT declare_list END_VAR
Rule 31    var -> VAR declare_list END_VAR
Rule 32    const -> CONST declare_list END_CONST
Rule 33    var_global -> VAR_GLOBAL declare_list END_VAR
Rule 34    statement_list -> <empty>
Rule 35    statement_list -> statement_list assign_statement
Rule 36    statement_list -> statement_list while_statement
Rule 37    statement_list -> statement_list if_statement
Rule 38    statement_list -> statement_list for_statement
Rule 39    statement_list -> statement_list call_statement
Rule 40    statement_list -> statement_list case_statement
Rule 41    declare_list -> <empty>
Rule 42    declare_list -> declare_list declare_int_statement
Rule 43    declare_list -> declare_list declare_float_statement
Rule 44    declare_list -> declare_list declare_timer_statement
Rule 45    declare_timer_statement -> ID COLON TP SEMICOLON
Rule 46    declare_timer_statement -> ID COLON TON SEMICOLON
Rule 47    declare_timer_statement -> ID COLON TOF SEMICOLON
Rule 48    declare_timer_statement -> ID COLON RTC SEMICOLON
Rule 49    declare_int_statement -> ID COLON INT ASSIGN int_number SEMICOLON
Rule 50    declare_int_statement -> ID COLON BOOL ASSIGN int_number SEMICOLON
Rule 51    declare_int_statement -> ID COLON BYTE ASSIGN int_number SEMICOLON
Rule 52    declare_int_statement -> ID COLON TIME ASSIGN int_number SEMICOLON
Rule 53    declare_int_statement -> ID COLON DWORD ASSIGN int_number SEMICOLON
Rule 54    declare_int_statement -> ID COLON STRING ASSIGN string_number SEMICOLON
Rule 55    declare_int_statement -> ID COLON BYTE ASSIGN ID SEMICOLON
Rule 56    declare_int_statement -> ID COLON TIME ASSIGN ID SEMICOLON
Rule 57    declare_int_statement -> ID COLON INT SEMICOLON
Rule 58    declare_int_statement -> ID COLON BOOL SEMICOLON
Rule 59    declare_int_statement -> ID COLON BYTE SEMICOLON
Rule 60    declare_int_statement -> ID COLON TIME SEMICOLON
Rule 61    declare_int_statement -> ID COLON DWORD SEMICOLON
Rule 62    declare_int_statement -> ID COLON STRING SEMICOLON
Rule 63    declare_float_statement -> ID COLON FLOAT ASSIGN float_number SEMICOLON
Rule 64    declare_float_statement -> ID COLON FLOAT SEMICOLON
Rule 65    declare_float_statement -> ID COLON REAL ASSIGN float_number SEMICOLON
Rule 66    declare_float_statement -> ID COLON REAL SEMICOLON
Rule 67    case_statement -> CASE ID OF case_list END_CASE SEMICOLON
Rule 68    case_list -> expression COLON statement_list
Rule 69    case_list -> case_list expression COLON statement_list
Rule 70    if_statement -> IF expression THEN statement_list END_IF SEMICOLON
Rule 71    if_statement -> IF expression THEN statement_list elsif_statement_list END_IF SEMICOLON
Rule 72    if_statement -> IF expression THEN statement_list else_statement END_IF SEMICOLON
Rule 73    if_statement -> IF expression THEN statement_list elsif_statement_list else_statement END_IF SEMICOLON
Rule 74    elsif_statement_list -> elsif_statement
Rule 75    elsif_statement_list -> elsif_statement_list elsif_statement
Rule 76    elsif_statement -> ELSIF expression THEN statement_list
Rule 77    else_statement -> ELSE statement_list
Rule 78    for_statement -> FOR ID ASSIGN expression TO expression DO statement_list END_FOR SEMICOLON
Rule 79    for_statement -> FOR ID ASSIGN expression TO expression BY expression DO statement_list END_FOR SEMICOLON
Rule 80    while_statement -> WHILE expression DO statement_list END_WHILE
Rule 81    assign_statement -> ID ASSIGN expression SEMICOLON
Rule 82    expression -> ID
Rule 83    expression -> int_number
Rule 84    expression -> float_number
Rule 85    expression -> string_number
Rule 86    expression -> log
Rule 87    expression -> exp
Rule 88    expression -> call
Rule 89    expression -> eq_string
Rule 90    expression -> expression PLUS expression
Rule 91    expression -> expression MINUS expression
Rule 92    expression -> expression TIMES expression
Rule 93    expression -> expression DIVIDE expression
Rule 94    expression -> expression AND expression
Rule 95    expression -> expression OR expression
Rule 96    expression -> expression XOR expression
Rule 97    expression -> expression LT expression
Rule 98    expression -> expression GT expression
Rule 99    expression -> expression LE expression
Rule 100   expression -> expression GE expression
Rule 101   expression -> expression EQ expression
Rule 102   expression -> LPAREN expression RPAREN
Rule 103   expression -> NOT expression
Rule 104   expression -> MINUS expression
Rule 105   expression -> PLUS expression
Rule 106   call_statement -> ID argument RPAREN SEMICOLON
Rule 107   argument -> LPAREN
Rule 108   argument -> argument ID ASSIGN expression
Rule 109   argument -> argument COMMA ID ASSIGN expression
Rule 110   call -> ID DOT ID
Rule 111   eq_string -> EQ_STRING LPAREN ID COMMA ID RPAREN
Rule 112   exp -> EXP LPAREN expression RPAREN
Rule 113   log -> LOG LPAREN expression RPAREN
Rule 114   log -> LN LPAREN expression RPAREN
Rule 115   int_number -> INT_NUMBER
Rule 116   int_number -> TRUE
Rule 117   int_number -> FALSE
Rule 118   int_number -> ID
Rule 119   float_number -> FLOAT_NUMBER
Rule 120   float_number -> ID
Rule 121   string_number -> STRING_NUMBER

Terminals, with rules where they appear

AND                  : 94
ASSIGN               : 49 50 51 52 53 54 55 56 63 65 78 79 81 108 109
BEGIN                : 7 9
BOOL                 : 12 50 58
BY                   : 79
BYTE                 : 15 51 55 59
CASE                 : 67
COLON                : 11 12 13 14 15 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 68 69
COMMA                : 109 111
COMMENT              : 
CONST                : 32
DIVIDE               : 93
DO                   : 78 79 80
DOT                  : 110
DWORD                : 53 61
ELSE                 : 77
ELSIF                : 76
END_CASE             : 67
END_CONST            : 32
END_FOR              : 78 79
END_FUNCTION         : 11 12 13 14 15
END_FUNCTION_BLOCK   : 9 10
END_IF               : 70 71 72 73
END_PROGRAM          : 7 8
END_VAR              : 28 29 30 31 33
END_WHILE            : 80
EQ                   : 101
EQ_STRING            : 111
EXP                  : 112
FALSE                : 117
FLOAT                : 14 63 64
FLOAT_NUMBER         : 119
FOR                  : 78 79
FUNCTION             : 11 12 13 14 15
FUNCTION_BLOCK       : 9 10
GE                   : 100
GT                   : 98
ID                   : 7 8 9 10 11 12 13 14 15 45 46 47 48 49 50 51 52 53 54 55 55 56 56 57 58 59 60 61 62 63 64 65 66 67 78 79 81 82 106 108 109 110 110 111 111 118 120
IF                   : 70 71 72 73
INT                  : 11 49 57
INT_NUMBER           : 115
LBRACE               : 
LE                   : 99
LN                   : 114
LOG                  : 113
LPAREN               : 102 107 111 112 113 114
LT                   : 97
MINUS                : 91 104
MULTI_COMMENT        : 
NOT                  : 103
OF                   : 67
OR                   : 95
PLUS                 : 90 105
PROGRAM              : 7 8
RBRACE               : 
REAL                 : 13 65 66
RPAREN               : 102 106 111 112 113 114
RTC                  : 48
SEMICOLON            : 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 70 71 72 73 78 79 81 106
SHARP                : 
STRING               : 54 62
STRING_NUMBER        : 121
THEN                 : 70 71 72 73 76
TIME                 : 52 56 60
TIMES                : 92
TO                   : 78 79
TOF                  : 47
TON                  : 46
TP                   : 45
TRUE                 : 116
VAR                  : 31
VAR_GLOBAL           : 33
VAR_INPUT            : 29
VAR_IN_OUT           : 30
VAR_OUTPUT           : 28
WHILE                : 80
XOR                  : 96
error                : 

Nonterminals, with rules where they appear

argument             : 106 108 109
assign_statement     : 35
call                 : 88
call_statement       : 39
case_list            : 67 69
case_statement       : 40
const                : 21 27
declare_float_statement : 43
declare_int_statement : 42
declare_list         : 28 29 30 31 32 33 42 43 44
declare_timer_statement : 44
else_statement       : 72 73
elsif_statement      : 74 75
elsif_statement_list : 71 73 75
eq_string            : 89
exp                  : 87
expression           : 68 69 70 71 72 73 76 78 78 79 79 79 80 81 90 90 91 91 92 92 93 93 94 94 95 95 96 96 97 97 98 98 99 99 100 100 101 101 102 103 104 105 108 109 112 113 114
float_number         : 63 65 84
for_statement        : 38
function_block_definition : 2 4
function_definition  : 3 5
if_statement         : 37
int_number           : 49 50 51 52 53 83
log                  : 86
module               : 4 5 6 0
program              : 1 6
statement_list       : 7 8 9 10 11 12 13 14 15 35 36 37 38 39 40 68 69 70 71 72 73 76 77 78 79 80
string_number        : 54 85
var                  : 18 24
var_global           : 20 26
var_in_out           : 19 25
var_input            : 16 22
var_list             : 7 8 9 10 11 12 13 14 15 22 23 24 25 26 27
var_output           : 17 23
while_statement      : 36

Parsing method: LALR

state 0

    (0) S' -> . module
    (1) module -> . program
    (2) module -> . function_block_definition
    (3) module -> . function_definition
    (4) module -> . module function_block_definition
    (5) module -> . module function_definition
    (6) module -> . module program
    (7) program -> . PROGRAM ID var_list BEGIN statement_list END_PROGRAM
    (8) program -> . PROGRAM ID var_list statement_list END_PROGRAM
    (9) function_block_definition -> . FUNCTION_BLOCK ID var_list BEGIN statement_list END_FUNCTION_BLOCK
    (10) function_block_definition -> . FUNCTION_BLOCK ID var_list statement_list END_FUNCTION_BLOCK
    (11) function_definition -> . FUNCTION ID COLON INT var_list statement_list END_FUNCTION
    (12) function_definition -> . FUNCTION ID COLON BOOL var_list statement_list END_FUNCTION
    (13) function_definition -> . FUNCTION ID COLON REAL var_list statement_list END_FUNCTION
    (14) function_definition -> . FUNCTION ID COLON FLOAT var_list statement_list END_FUNCTION
    (15) function_definition -> . FUNCTION ID COLON BYTE var_list statement_list END_FUNCTION

    PROGRAM         shift and go to state 5
    FUNCTION_BLOCK  shift and go to state 6
    FUNCTION        shift and go to state 7

    module                         shift and go to state 1
    program                        shift and go to state 2
    function_block_definition      shift and go to state 3
    function_definition            shift and go to state 4

state 1

    (0) S' -> module .
    (4) module -> module . function_block_definition
    (5) module -> module . function_definition
    (6) module -> module . program
    (9) function_block_definition -> . FUNCTION_BLOCK ID var_list BEGIN statement_list END_FUNCTION_BLOCK
    (10) function_block_definition -> . FUNCTION_BLOCK ID var_list statement_list END_FUNCTION_BLOCK
    (11) function_definition -> . FUNCTION ID COLON INT var_list statement_list END_FUNCTION
    (12) function_definition -> . FUNCTION ID COLON BOOL var_list statement_list END_FUNCTION
    (13) function_definition -> . FUNCTION ID COLON REAL var_list statement_list END_FUNCTION
    (14) function_definition -> . FUNCTION ID COLON FLOAT var_list statement_list END_FUNCTION
    (15) function_definition -> . FUNCTION ID COLON BYTE var_list statement_list END_FUNCTION
    (7) program -> . PROGRAM ID var_list BEGIN statement_list END_PROGRAM
    (8) program -> . PROGRAM ID var_list statement_list END_PROGRAM

    FUNCTION_BLOCK  shift and go to state 6
    FUNCTION        shift and go to state 7
    PROGRAM         shift and go to state 5

    function_block_definition      shift and go to state 8
    function_definition            shift and go to state 9
    program                        shift and go to state 10

state 2

    (1) module -> program .

    FUNCTION_BLOCK  reduce using rule 1 (module -> program .)
    FUNCTION        reduce using rule 1 (module -> program .)
    PROGRAM         reduce using rule 1 (module -> program .)
    $end            reduce using rule 1 (module -> program .)


state 3

    (2) module -> function_block_definition .

    FUNCTION_BLOCK  reduce using rule 2 (module -> function_block_definition .)
    FUNCTION        reduce using rule 2 (module -> function_block_definition .)
    PROGRAM         reduce using rule 2 (module -> function_block_definition .)
    $end            reduce using rule 2 (module -> function_block_definition .)


state 4

    (3) module -> function_definition .

    FUNCTION_BLOCK  reduce using rule 3 (module -> function_definition .)
    FUNCTION        reduce using rule 3 (module -> function_definition .)
    PROGRAM         reduce using rule 3 (module -> function_definition .)
    $end            reduce using rule 3 (module -> function_definition .)


state 5

    (7) program -> PROGRAM . ID var_list BEGIN statement_list END_PROGRAM
    (8) program -> PROGRAM . ID var_list statement_list END_PROGRAM

    ID              shift and go to state 11


state 6

    (9) function_block_definition -> FUNCTION_BLOCK . ID var_list BEGIN statement_list END_FUNCTION_BLOCK
    (10) function_block_definition -> FUNCTION_BLOCK . ID var_list statement_list END_FUNCTION_BLOCK

    ID              shift and go to state 12


state 7

    (11) function_definition -> FUNCTION . ID COLON INT var_list statement_list END_FUNCTION
    (12) function_definition -> FUNCTION . ID COLON BOOL var_list statement_list END_FUNCTION
    (13) function_definition -> FUNCTION . ID COLON REAL var_list statement_list END_FUNCTION
    (14) function_definition -> FUNCTION . ID COLON FLOAT var_list statement_list END_FUNCTION
    (15) function_definition -> FUNCTION . ID COLON BYTE var_list statement_list END_FUNCTION

    ID              shift and go to state 13


state 8

    (4) module -> module function_block_definition .

    FUNCTION_BLOCK  reduce using rule 4 (module -> module function_block_definition .)
    FUNCTION        reduce using rule 4 (module -> module function_block_definition .)
    PROGRAM         reduce using rule 4 (module -> module function_block_definition .)
    $end            reduce using rule 4 (module -> module function_block_definition .)


state 9

    (5) module -> module function_definition .

    FUNCTION_BLOCK  reduce using rule 5 (module -> module function_definition .)
    FUNCTION        reduce using rule 5 (module -> module function_definition .)
    PROGRAM         reduce using rule 5 (module -> module function_definition .)
    $end            reduce using rule 5 (module -> module function_definition .)


state 10

    (6) module -> module program .

    FUNCTION_BLOCK  reduce using rule 6 (module -> module program .)
    FUNCTION        reduce using rule 6 (module -> module program .)
    PROGRAM         reduce using rule 6 (module -> module program .)
    $end            reduce using rule 6 (module -> module program .)


state 11

    (7) program -> PROGRAM ID . var_list BEGIN statement_list END_PROGRAM
    (8) program -> PROGRAM ID . var_list statement_list END_PROGRAM
    (16) var_list -> . var_input
    (17) var_list -> . var_output
    (18) var_list -> . var
    (19) var_list -> . var_in_out
    (20) var_list -> . var_global
    (21) var_list -> . const
    (22) var_list -> . var_list var_input
    (23) var_list -> . var_list var_output
    (24) var_list -> . var_list var
    (25) var_list -> . var_list var_in_out
    (26) var_list -> . var_list var_global
    (27) var_list -> . var_list const
    (29) var_input -> . VAR_INPUT declare_list END_VAR
    (28) var_output -> . VAR_OUTPUT declare_list END_VAR
    (31) var -> . VAR declare_list END_VAR
    (30) var_in_out -> . VAR_IN_OUT declare_list END_VAR
    (33) var_global -> . VAR_GLOBAL declare_list END_VAR
    (32) const -> . CONST declare_list END_CONST

    VAR_INPUT       shift and go to state 21
    VAR_OUTPUT      shift and go to state 22
    VAR             shift and go to state 23
    VAR_IN_OUT      shift and go to state 24
    VAR_GLOBAL      shift and go to state 25
    CONST           shift and go to state 26

    var_list                       shift and go to state 14
    var_input                      shift and go to state 15
    var_output                     shift and go to state 16
    var                            shift and go to state 17
    var_in_out                     shift and go to state 18
    var_global                     shift and go to state 19
    const                          shift and go to state 20

state 12

    (9) function_block_definition -> FUNCTION_BLOCK ID . var_list BEGIN statement_list END_FUNCTION_BLOCK
    (10) function_block_definition -> FUNCTION_BLOCK ID . var_list statement_list END_FUNCTION_BLOCK
    (16) var_list -> . var_input
    (17) var_list -> . var_output
    (18) var_list -> . var
    (19) var_list -> . var_in_out
    (20) var_list -> . var_global
    (21) var_list -> . const
    (22) var_list -> . var_list var_input
    (23) var_list -> . var_list var_output
    (24) var_list -> . var_list var
    (25) var_list -> . var_list var_in_out
    (26) var_list -> . var_list var_global
    (27) var_list -> . var_list const
    (29) var_input -> . VAR_INPUT declare_list END_VAR
    (28) var_output -> . VAR_OUTPUT declare_list END_VAR
    (31) var -> . VAR declare_list END_VAR
    (30) var_in_out -> . VAR_IN_OUT declare_list END_VAR
    (33) var_global -> . VAR_GLOBAL declare_list END_VAR
    (32) const -> . CONST declare_list END_CONST

    VAR_INPUT       shift and go to state 21
    VAR_OUTPUT      shift and go to state 22
    VAR             shift and go to state 23
    VAR_IN_OUT      shift and go to state 24
    VAR_GLOBAL      shift and go to state 25
    CONST           shift and go to state 26

    var_list                       shift and go to state 27
    var_input                      shift and go to state 15
    var_output                     shift and go to state 16
    var                            shift and go to state 17
    var_in_out                     shift and go to state 18
    var_global                     shift and go to state 19
    const                          shift and go to state 20

state 13

    (11) function_definition -> FUNCTION ID . COLON INT var_list statement_list END_FUNCTION
    (12) function_definition -> FUNCTION ID . COLON BOOL var_list statement_list END_FUNCTION
    (13) function_definition -> FUNCTION ID . COLON REAL var_list statement_list END_FUNCTION
    (14) function_definition -> FUNCTION ID . COLON FLOAT var_list statement_list END_FUNCTION
    (15) function_definition -> FUNCTION ID . COLON BYTE var_list statement_list END_FUNCTION

    COLON           shift and go to state 28


state 14

    (7) program -> PROGRAM ID var_list . BEGIN statement_list END_PROGRAM
    (8) program -> PROGRAM ID var_list . statement_list END_PROGRAM
    (22) var_list -> var_list . var_input
    (23) var_list -> var_list . var_output
    (24) var_list -> var_list . var
    (25) var_list -> var_list . var_in_out
    (26) var_list -> var_list . var_global
    (27) var_list -> var_list . const
    (34) statement_list -> .
    (35) statement_list -> . statement_list assign_statement
    (36) statement_list -> . statement_list while_statement
    (37) statement_list -> . statement_list if_statement
    (38) statement_list -> . statement_list for_statement
    (39) statement_list -> . statement_list call_statement
    (40) statement_list -> . statement_list case_statement
    (29) var_input -> . VAR_INPUT declare_list END_VAR
    (28) var_output -> . VAR_OUTPUT declare_list END_VAR
    (31) var -> . VAR declare_list END_VAR
    (30) var_in_out -> . VAR_IN_OUT declare_list END_VAR
    (33) var_global -> . VAR_GLOBAL declare_list END_VAR
    (32) const -> . CONST declare_list END_CONST

    BEGIN           shift and go to state 29
    END_PROGRAM     reduce using rule 34 (statement_list -> .)
    ID              reduce using rule 34 (statement_list -> .)
    WHILE           reduce using rule 34 (statement_list -> .)
    IF              reduce using rule 34 (statement_list -> .)
    FOR             reduce using rule 34 (statement_list -> .)
    CASE            reduce using rule 34 (statement_list -> .)
    VAR_INPUT       shift and go to state 21
    VAR_OUTPUT      shift and go to state 22
    VAR             shift and go to state 23
    VAR_IN_OUT      shift and go to state 24
    VAR_GLOBAL      shift and go to state 25
    CONST           shift and go to state 26

    statement_list                 shift and go to state 30
    var_input                      shift and go to state 31
    var_output                     shift and go to state 32
    var                            shift and go to state 33
    var_in_out                     shift and go to state 34
    var_global                     shift and go to state 35
    const                          shift and go to state 36

state 15

    (16) var_list -> var_input .

    BEGIN           reduce using rule 16 (var_list -> var_input .)
    VAR_INPUT       reduce using rule 16 (var_list -> var_input .)
    VAR_OUTPUT      reduce using rule 16 (var_list -> var_input .)
    VAR             reduce using rule 16 (var_list -> var_input .)
    VAR_IN_OUT      reduce using rule 16 (var_list -> var_input .)
    VAR_GLOBAL      reduce using rule 16 (var_list -> var_input .)
    CONST           reduce using rule 16 (var_list -> var_input .)
    END_PROGRAM     reduce using rule 16 (var_list -> var_input .)
    ID              reduce using rule 16 (var_list -> var_input .)
    WHILE           reduce using rule 16 (var_list -> var_input .)
    IF              reduce using rule 16 (var_list -> var_input .)
    FOR             reduce using rule 16 (var_list -> var_input .)
    CASE            reduce using rule 16 (var_list -> var_input .)
    END_FUNCTION_BLOCK reduce using rule 16 (var_list -> var_input .)
    END_FUNCTION    reduce using rule 16 (var_list -> var_input .)


state 16

    (17) var_list -> var_output .

    BEGIN           reduce using rule 17 (var_list -> var_output .)
    VAR_INPUT       reduce using rule 17 (var_list -> var_output .)
    VAR_OUTPUT      reduce using rule 17 (var_list -> var_output .)
    VAR             reduce using rule 17 (var_list -> var_output .)
    VAR_IN_OUT      reduce using rule 17 (var_list -> var_output .)
    VAR_GLOBAL      reduce using rule 17 (var_list -> var_output .)
    CONST           reduce using rule 17 (var_list -> var_output .)
    END_PROGRAM     reduce using rule 17 (var_list -> var_output .)
    ID              reduce using rule 17 (var_list -> var_output .)
    WHILE           reduce using rule 17 (var_list -> var_output .)
    IF              reduce using rule 17 (var_list -> var_output .)
    FOR             reduce using rule 17 (var_list -> var_output .)
    CASE            reduce using rule 17 (var_list -> var_output .)
    END_FUNCTION_BLOCK reduce using rule 17 (var_list -> var_output .)
    END_FUNCTION    reduce using rule 17 (var_list -> var_output .)


state 17

    (18) var_list -> var .

    BEGIN           reduce using rule 18 (var_list -> var .)
    VAR_INPUT       reduce using rule 18 (var_list -> var .)
    VAR_OUTPUT      reduce using rule 18 (var_list -> var .)
    VAR             reduce using rule 18 (var_list -> var .)
    VAR_IN_OUT      reduce using rule 18 (var_list -> var .)
    VAR_GLOBAL      reduce using rule 18 (var_list -> var .)
    CONST           reduce using rule 18 (var_list -> var .)
    END_PROGRAM     reduce using rule 18 (var_list -> var .)
    ID              reduce using rule 18 (var_list -> var .)
    WHILE           reduce using rule 18 (var_list -> var .)
    IF              reduce using rule 18 (var_list -> var .)
    FOR             reduce using rule 18 (var_list -> var .)
    CASE            reduce using rule 18 (var_list -> var .)
    END_FUNCTION_BLOCK reduce using rule 18 (var_list -> var .)
    END_FUNCTION    reduce using rule 18 (var_list -> var .)


state 18

    (19) var_list -> var_in_out .

    BEGIN           reduce using rule 19 (var_list -> var_in_out .)
    VAR_INPUT       reduce using rule 19 (var_list -> var_in_out .)
    VAR_OUTPUT      reduce using rule 19 (var_list -> var_in_out .)
    VAR             reduce using rule 19 (var_list -> var_in_out .)
    VAR_IN_OUT      reduce using rule 19 (var_list -> var_in_out .)
    VAR_GLOBAL      reduce using rule 19 (var_list -> var_in_out .)
    CONST           reduce using rule 19 (var_list -> var_in_out .)
    END_PROGRAM     reduce using rule 19 (var_list -> var_in_out .)
    ID              reduce using rule 19 (var_list -> var_in_out .)
    WHILE           reduce using rule 19 (var_list -> var_in_out .)
    IF              reduce using rule 19 (var_list -> var_in_out .)
    FOR             reduce using rule 19 (var_list -> var_in_out .)
    CASE            reduce using rule 19 (var_list -> var_in_out .)
    END_FUNCTION_BLOCK reduce using rule 19 (var_list -> var_in_out .)
    END_FUNCTION    reduce using rule 19 (var_list -> var_in_out .)


state 19

    (20) var_list -> var_global .

    BEGIN           reduce using rule 20 (var_list -> var_global .)
    VAR_INPUT       reduce using rule 20 (var_list -> var_global .)
    VAR_OUTPUT      reduce using rule 20 (var_list -> var_global .)
    VAR             reduce using rule 20 (var_list -> var_global .)
    VAR_IN_OUT      reduce using rule 20 (var_list -> var_global .)
    VAR_GLOBAL      reduce using rule 20 (var_list -> var_global .)
    CONST           reduce using rule 20 (var_list -> var_global .)
    END_PROGRAM     reduce using rule 20 (var_list -> var_global .)
    ID              reduce using rule 20 (var_list -> var_global .)
    WHILE           reduce using rule 20 (var_list -> var_global .)
    IF              reduce using rule 20 (var_list -> var_global .)
    FOR             reduce using rule 20 (var_list -> var_global .)
    CASE            reduce using rule 20 (var_list -> var_global .)
    END_FUNCTION_BLOCK reduce using rule 20 (var_list -> var_global .)
    END_FUNCTION    reduce using rule 20 (var_list -> var_global .)


state 20

    (21) var_list -> const .

    BEGIN           reduce using rule 21 (var_list -> const .)
    VAR_INPUT       reduce using rule 21 (var_list -> const .)
    VAR_OUTPUT      reduce using rule 21 (var_list -> const .)
    VAR             reduce using rule 21 (var_list -> const .)
    VAR_IN_OUT      reduce using rule 21 (var_list -> const .)
    VAR_GLOBAL      reduce using rule 21 (var_list -> const .)
    CONST           reduce using rule 21 (var_list -> const .)
    END_PROGRAM     reduce using rule 21 (var_list -> const .)
    ID              reduce using rule 21 (var_list -> const .)
    WHILE           reduce using rule 21 (var_list -> const .)
    IF              reduce using rule 21 (var_list -> const .)
    FOR             reduce using rule 21 (var_list -> const .)
    CASE            reduce using rule 21 (var_list -> const .)
    END_FUNCTION_BLOCK reduce using rule 21 (var_list -> const .)
    END_FUNCTION    reduce using rule 21 (var_list -> const .)


state 21

    (29) var_input -> VAR_INPUT . declare_list END_VAR
    (41) declare_list -> .
    (42) declare_list -> . declare_list declare_int_statement
    (43) declare_list -> . declare_list declare_float_statement
    (44) declare_list -> . declare_list declare_timer_statement

    END_VAR         reduce using rule 41 (declare_list -> .)
    ID              reduce using rule 41 (declare_list -> .)

    declare_list                   shift and go to state 37

state 22

    (28) var_output -> VAR_OUTPUT . declare_list END_VAR
    (41) declare_list -> .
    (42) declare_list -> . declare_list declare_int_statement
    (43) declare_list -> . declare_list declare_float_statement
    (44) declare_list -> . declare_list declare_timer_statement

    END_VAR         reduce using rule 41 (declare_list -> .)
    ID              reduce using rule 41 (declare_list -> .)

    declare_list                   shift and go to state 38

state 23

    (31) var -> VAR . declare_list END_VAR
    (41) declare_list -> .
    (42) declare_list -> . declare_list declare_int_statement
    (43) declare_list -> . declare_list declare_float_statement
    (44) declare_list -> . declare_list declare_timer_statement

    END_VAR         reduce using rule 41 (declare_list -> .)
    ID              reduce using rule 41 (declare_list -> .)

    declare_list                   shift and go to state 39

state 24

    (30) var_in_out -> VAR_IN_OUT . declare_list END_VAR
    (41) declare_list -> .
    (42) declare_list -> . declare_list declare_int_statement
    (43) declare_list -> . declare_list declare_float_statement
    (44) declare_list -> . declare_list declare_timer_statement

    END_VAR         reduce using rule 41 (declare_list -> .)
    ID              reduce using rule 41 (declare_list -> .)

    declare_list                   shift and go to state 40

state 25

    (33) var_global -> VAR_GLOBAL . declare_list END_VAR
    (41) declare_list -> .
    (42) declare_list -> . declare_list declare_int_statement
    (43) declare_list -> . declare_list declare_float_statement
    (44) declare_list -> . declare_list declare_timer_statement

    END_VAR         reduce using rule 41 (declare_list -> .)
    ID              reduce using rule 41 (declare_list -> .)

    declare_list                   shift and go to state 41

state 26

    (32) const -> CONST . declare_list END_CONST
    (41) declare_list -> .
    (42) declare_list -> . declare_list declare_int_statement
    (43) declare_list -> . declare_list declare_float_statement
    (44) declare_list -> . declare_list declare_timer_statement

    END_CONST       reduce using rule 41 (declare_list -> .)
    ID              reduce using rule 41 (declare_list -> .)

    declare_list                   shift and go to state 42

state 27

    (9) function_block_definition -> FUNCTION_BLOCK ID var_list . BEGIN statement_list END_FUNCTION_BLOCK
    (10) function_block_definition -> FUNCTION_BLOCK ID var_list . statement_list END_FUNCTION_BLOCK
    (22) var_list -> var_list . var_input
    (23) var_list -> var_list . var_output
    (24) var_list -> var_list . var
    (25) var_list -> var_list . var_in_out
    (26) var_list -> var_list . var_global
    (27) var_list -> var_list . const
    (34) statement_list -> .
    (35) statement_list -> . statement_list assign_statement
    (36) statement_list -> . statement_list while_statement
    (37) statement_list -> . statement_list if_statement
    (38) statement_list -> . statement_list for_statement
    (39) statement_list -> . statement_list call_statement
    (40) statement_list -> . statement_list case_statement
    (29) var_input -> . VAR_INPUT declare_list END_VAR
    (28) var_output -> . VAR_OUTPUT declare_list END_VAR
    (31) var -> . VAR declare_list END_VAR
    (30) var_in_out -> . VAR_IN_OUT declare_list END_VAR
    (33) var_global -> . VAR_GLOBAL declare_list END_VAR
    (32) const -> . CONST declare_list END_CONST

    BEGIN           shift and go to state 43
    END_FUNCTION_BLOCK reduce using rule 34 (statement_list -> .)
    ID              reduce using rule 34 (statement_list -> .)
    WHILE           reduce using rule 34 (statement_list -> .)
    IF              reduce using rule 34 (statement_list -> .)
    FOR             reduce using rule 34 (statement_list -> .)
    CASE            reduce using rule 34 (statement_list -> .)
    VAR_INPUT       shift and go to state 21
    VAR_OUTPUT      shift and go to state 22
    VAR             shift and go to state 23
    VAR_IN_OUT      shift and go to state 24
    VAR_GLOBAL      shift and go to state 25
    CONST           shift and go to state 26

    statement_list                 shift and go to state 44
    var_input                      shift and go to state 31
    var_output                     shift and go to state 32
    var                            shift and go to state 33
    var_in_out                     shift and go to state 34
    var_global                     shift and go to state 35
    const                          shift and go to state 36

state 28

    (11) function_definition -> FUNCTION ID COLON . INT var_list statement_list END_FUNCTION
    (12) function_definition -> FUNCTION ID COLON . BOOL var_list statement_list END_FUNCTION
    (13) function_definition -> FUNCTION ID COLON . REAL var_list statement_list END_FUNCTION
    (14) function_definition -> FUNCTION ID COLON . FLOAT var_list statement_list END_FUNCTION
    (15) function_definition -> FUNCTION ID COLON . BYTE var_list statement_list END_FUNCTION

    INT             shift and go to state 45
    BOOL            shift and go to state 46
    REAL            shift and go to state 47
    FLOAT           shift and go to state 48
    BYTE            shift and go to state 49


state 29
